--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
   "name": "bible-ai",
   "version": "2.0.0",
-  "description": "Bible AI Application",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "node server.js"
+    "start": "node server.js"
   },
   "engines": {
-    "node": ">=14.x"
+    "node": "18.x"
   },
   "dependencies": {
+    "express": "^4.18.2",
+    "mongoose": "^8.0.0",
     "dotenv": "^16.3.1",
-    "mongoose": "^8.0.0"
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
+    "cors": "^2.8.5",
+    "node-fetch": "^2.7.0"
   }
 }
